--- a/project.config.json
+++ b/project.config.json
@@ -14,7 +14,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.6.5",
-	"appid": "wxe59bfa6b23232df8",
+	"appid": "wxf5724cd6172e7016",
 	"projectname": "Scan-Eat-MP",
 	"debugOptions": {
 		"hidedInDevtools": []
