--- a/app.json
+++ b/app.json
@@ -6,7 +6,8 @@
     "pages/scan/scan",
     "pages/profile/profile",
     "pages/show/show",
-    "pages/form/form"
+    "pages/form/form", 
+    "pages/dashboard/dashboard"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -17,6 +18,12 @@
   "tabBar": {
         "selectedColor": "#EA7B4C",
     "list": [
+      {
+        "pagePath": "pages/dashboard/dashboard",
+        "text": "Dashboard",
+        "iconPath": "/images/dashboar_icon.png",
+        "selectedIconPath": "/images/dashboard.png"
+      },
       {
         "pagePath": "pages/favorite/favorite",
         "text": "Favorite",
