--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "ScanEat",
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
@@ -38,7 +38,7 @@
       },
       {
         "pagePath": "pages/profile/profile",
-        "text": "Profile",
+        "text": "History",
         "iconPath": "/images/profile_footer.png",
         "selectedIconPath": "/images/profile_footer_orange.png"
       }
