--- a/project.config.json
+++ b/project.config.json
@@ -40,7 +40,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 4,
+			"current": 5,
 			"list": [
 				{
 					"id": -1,
@@ -74,6 +74,13 @@
 					"id": -1,
 					"name": "Dashboard",
 					"pathName": "pages/dashboard/dashboard",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "scan",
+					"pathName": "pages/scan/scan",
 					"scene": null
 				}
 			]
